--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
     repositories {
 
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +20,10 @@ buildscript {
 allprojects {
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
